syntax =  "proto3";

package order;

option go_package = "/pb;pb";

service OrderService {
    rpc ShowAllOrders(ShowAllOrderRequest) returns (ShowAllOrderResponse) {}
    rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse) {}
}

message ShowAllOrderRequest {
}

message ShowAllOrderResponse {
    repeated Order orders = 1;
}

message Order {
    string order_id = 1;
    string  user_id = 2;
    string  product_id = 3;
	int32  qty = 4;
	double amount = 5;
	string status = 6;
}

message UpdateOrderRequest {
    string order_id = 1;
}

message UpdateOrderResponse {
    string message = 1;
}