syntax = "proto3";

package user;

option go_package = "/pb;pb";

service Order {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
    rpc GetAllOrdersWithStatus(GetAllOrdersWithStatusRequest) returns (GetAllOrdersWithStatusResponse) {}
    rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse) {}
    rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse) {}
}

message CreateOrderRequest {
    string transaction_id = 1;
    string user_id = 2;
    string product_id = 3;
    int32 qty = 4;
    float amount = 5;
    string status = 6;
}

message CreateOrderResponse {
    string message = 1;
}

message GetAllOrdersWithStatusRequest {
    string status = 1;
}

message GetAllOrdersWithStatusResponse {
   repeated OrderResponse orders = 1;
}

message OrderResponse {
    string transaction_id = 1;
    string user_id = 2;
    string product_id = 3;
    int32 qty = 4;
    float amount = 5;
    string status = 6;
    string created_at = 7;
    string updated_at = 8;
}

message UpdateOrderRequest {
    string transaction_id = 1;
    int32 qty = 4;
}

message UpdateOrderResponse {
    string message = 1;
}

message DeleteOrderRequest {
    string transaction_id = 1;
}

message DeleteOrderResponse {
    string message = 1;
}
